--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "truffle-solc-select",
-  "version": "0.1.3",
+  "version": "0.1.6",
   "description": "Handles multiple solc version compilation between smart contracts using the external compiler",
   "repository": "https://github.com/harishperfect/truffle-solc-select",
   "main": "solc-multicompile.js",
   "files": [
+    "bin/scripts/*",
     "solc-multicompile.js",
     "truffle-plugin.json"
   ],
